# AverageResponseManagers

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  programm_avarage_response.py  pyproject.toml  requirements.txt  update_repo_linux.bat  update_repo_windows.bat
settings/db_api/: connect.yaml
settings/google_api/: google_sheets_info.yaml  token.json
src/: __init__.py  config.py  data_processing.py  get_data_db.py  save_data_google_sheets.py
