[project]
name = "AverageResponseManagers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "google-api-core==2.24.0",
    "google-api-python-client==2.157.0",
    "google-auth-httplib2==0.2.0",
    "google-auth==2.37.0",
    "googleapis-common-protos==1.66.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "loguru==0.7.3",
    "numpy==2.2.1",
    "oauth2client==4.1.3",
    "pandas==2.2.3",
    "pip==23.2.1",
    "proto-plus==1.25.0",
    "protobuf==5.29.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "requests==2.32.3",
    "rsa==4.9",
    "six==1.17.0",
    "tenacity==9.0.0",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "win32-setctime==1.2.0",
    "psycopg2==2.9.10",
    "pyaml==25.1.0",
    "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
